# purview

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  github-release.yml  release.yml
docs/: DESIGN.md  MIGRATING_FROM_OSO.md  THREAT_MODEL.md  index.md  reference.md
examples/tracker/: README.md  alembic.ini  requirements.txt  test_smoke.py
examples/tracker/migrations/: env.py
examples/tracker/migrations/versions/: 0001_initial.py
examples/tracker/tracker/: app.py  db.py  models.py  policy.py  seed.py
src/purview/: __init__.py  exceptions.py  predicates.py
src/purview/core/: __init__.py  actions.py  audit.py  combine.py  context.py  explanation.py  helpers.py  registry.py  types.py
src/purview/fastapi/: __init__.py  dependencies.py  errors.py  guards.py
src/purview/sqlalchemy/: __init__.py  binding.py  bypass.py  checking.py  creating.py  discovery.py  enforcer.py  explanation.py  filtering.py  predicates.py  read_guard.py  write_guard.py
tests/examples/: test_blog_app.py
tests/integration/: conftest.py  models.py  test_action_fallback.py  test_adversarial.py  test_adversarial_orm.py  test_audit.py  test_batch_check.py  test_before_flush.py  test_bypass.py  test_bypass_isolation.py  test_composite_and_uuid.py  test_create_rules.py  test_create_validation.py  test_discovery_validation.py  test_enforcer_edges.py  test_exists_check.py  test_explain.py  test_get_behavior.py  test_per_model_column.py  test_polymorphic.py  test_read_filter.py  test_relationship_loads.py  test_role_hierarchy.py  test_strict_mode.py  test_warnings.py  test_write_guard_edges.py
tests/unit/: test_audit_unit.py  test_combine_default_deny.py  test_combine_or.py  test_context.py  test_explanation.py  test_helpers.py  test_registry.py  test_role_hierarchy_unit.py
