[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "purview-authz"
dynamic = ["version"]
description = "Row-level authorization and multi-tenancy for FastAPI + SQLAlchemy: define a policy once as column expressions and get both yes/no checks and query filtering from the same rule."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Eric Hare" }]
keywords = [
  "authorization", "multi-tenancy", "sqlalchemy", "fastapi",
  "row-level-security", "rbac", "abac", "async",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Framework :: FastAPI",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Typing :: Typed",
]
dependencies = ["sqlalchemy[asyncio]>=2.0,<2.1"]

[project.optional-dependencies]
fastapi = ["fastapi>=0.110"]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
  "pytest-cov>=5",
  "hypothesis>=6",
  "aiosqlite>=0.20",
  "asyncpg>=0.29",
  "httpx>=0.27",
  "fastapi>=0.110",
  "mypy>=1.11",
  "ruff>=0.6",
]

[project.urls]
Homepage = "https://github.com/erichare/purview"
Repository = "https://github.com/erichare/purview"
Issues = "https://github.com/erichare/purview/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/purview"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "C4", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "RUF012"]  # assert is the point of a test; __mapper_args__ is a SA idiom
"src/purview/fastapi/**" = ["B008"]  # Depends(...) in defaults is the FastAPI idiom
"tests/examples/**" = ["S101", "RUF012", "B008"]
"spike/**" = ["S101", "B018"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src/purview"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--strict-markers"
markers = [
  "requires_postgres: integration test that needs a real PostgreSQL backend",
]

[tool.coverage.run]
branch = true
source = ["purview"]
